--- a/src/static/styles/variables.scss
+++ b/src/static/styles/variables.scss
@@ -11,6 +11,7 @@
     --color-gray-dark: #999999;
     --color-gray: #cccccc;
     --color-gray-light: #f5f5f5;
+    --color-gray-light-2: #F4F5F6;
     --color-light-blue: #EBF6FD;
     --color-green: #E6FFED;
     --color-red: #FFEEF0;
