--- a/src/components/__supportComponents/Dropdown/styles.scss
+++ b/src/components/__supportComponents/Dropdown/styles.scss
@@ -13,7 +13,7 @@
         width: 360px;
         height: auto;
         max-height: 240px;
-        overflow-y: scroll;
+        overflow-y: auto;
         box-shadow: 0px 4px 16px rgba(53, 73, 93, 0.2);
         border-radius: 5px;
         z-index: 100;
