--- a/src/static/styles/index.scss
+++ b/src/static/styles/index.scss
@@ -1,6 +1,8 @@
 @import "variables";
+@import "mixins";
 
 body {
+    @include text-size-s;
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
