--- a/src/containers/Breadcrumbs/styles.scss
+++ b/src/containers/Breadcrumbs/styles.scss
@@ -4,12 +4,13 @@
     font-size: 0;
     padding: 10px 0;
     border-bottom: 1px solid var(--color-border);
-
+    
     &-Item {
         @include text-size-s;
         
         display: inline-block;
         color: var(--color-text-secondary);
+        user-select: none;
         cursor: pointer;
 
         &:not(:last-child):after {
